@startuml Repka DB
!define primary_key(x) <b><color:#b8861b><&key></color> x</b>
!define foreign_key(x) <color:#aaaaaa><&key></color> x
!define column(x) <color:#efefef><&media-record></color> x
!define table(x) entity x << (T, white) >>

table( suppliers ){
    /'Таблица поставщик'/
    primary_key( id ): UUID
    column( password ): TEXT /'пароль поставщика'/
    column( company_name ): TEXT /'название компании'/
    column( contact_name ): TEXT /'имя поставщика'/
    column( contact_adress ): TEXT /'адрес поставщика'/
    column( phone_number ): TEXT /'номер телефона поставщика'/
    column( email ): TEXT /'почта поставщика'/
    column( site ): TEXT /'сайт поставщика'/
    column( social_network ): TEXT /'социальные сети поставщика'/
    column( delivery_min_price ): NUMERIC /'минимальная цена товара'/
    column( estimate_delivery_time_from ): datetime /'предполагаемое время доставки от'/
    column( estimate_delivery_time_to ): datetime /'предполагаемое время доставки до'/
    column( delivery_day ): TEXT /'дни доставки (пн, вт, ср и тд)'/
    column( delivery_time ): TEXT /'время доставки'/
    column( application_day ): TEXT /'дни приема заявок (пн, вт, ср и тд)'/
    column( application_time ): TEXT /'время приема заявок'/
    column( ooo ): TEXT /'ООО,ИП'/
    column( ogrn ): TEXT /'ОГРН'/
    column( inn ): TEXT /'ИНН'/
    column( bank_account ): TEXT /'расчетный счет'/
    column( created ): datetime /'дата создания карточки поставщика'/
    column( modified ): datetime /'дата изменения карточки поставщика'/
}

table( city_tags ){
    /'Таблица тегов городов'/
    primary_key( id ): UUID
    column( city ): TEXT /'Название города'/
}

table( region_tags ){
    /'Таблица тегов регионов'/
    primary_key( id ): UUID
    column( region ): TEXT /'Название региона'/
}

table( suppliers_city_tags ){
    primary_key( id ): UUID
    foreign_key( supplier_id ): UUID <<FK>>
    foreign_key( city_tag_id ): UUID <<FK>>
}

table( suppliers_region_tags ){
    primary_key( id ): UUID
    foreign_key( supplier_id ): UUID <<FK>>
    foreign_key( city_region_id ): UUID <<FK>>
}

table( supplier_cert ){
    /'Таблица сертификатов клиента'/
    primary_key( id ): UUID
    column( certificate ): bytea
    column( certificate_url): TEXT
    foreign_key( supplier_id ): UUID <<FK>>
}

table( good ){
    /'Таблица товаров'/
    primary_key( id ): UUID
    column( photo ): TEXT /'Путь до фотографии с товаром'/
    column( price ): NUMERIC /'Цена за единицу'/
    column( volume ): INTEGER  /'Объем'/
    column( balance ): INTEGER /'Остаток'/
    column( calories ): INTEGER /'Калории'/
    column( proteins ): INTEGER /'Белки'/
    column( fats ): INTEGER /'Жиры'/
    column( carbohydrates ): INTEGER /'Углеводы'/
    foreign_key( category_tag_id ): UUID <<FK>>
    foreign_key( supplier_id ): UUID <<FK>>
}

table( good_tag ){
    /'Таблица тэгов товаров'/
    primary_key( id ): UUID
    column( good_tag ): TEXT
    foreign_key( category_tag_id ): UUID <<FK>>
}

table( category_tag ){
    /'Таблица категорий товаров'/
    primary_key( id ): UUID
    column( good_category ): TEXT /'Название категории товара'/
}

table( horeca ){
    primary_key( id ): UUID 
    column( password ): TEXT /'Пароль хореки'/
    column( name ): TEXT /'Имя хореки'/
    column( company_name ): TEXT /'Название компании хореки'/
    column( phone_number ): TEXT /'Номер телефона хореки'/
    column( email ): TEXT /'имейл хореки'/
    column( ooo ): TEXT /'ООО ИП хореки'/
    column( inn ): TEXT /'ИНН хореки'/
    /'column( bank_account ): TEXT'/ /'Расчетный счет хореки'/
}

table( horeca_favourites ){
    primary_key( id ): UUID
    foreign_key( horeca_id ): UUID <<FK>>
    foreign_key( supllier_id ): UUID <<FK>>
}

table( restaurant ){
    primary_key( id ): UUID
    column( restaurant_name ): TEXT
    column( restaurant_theme ): TEXT
    foreign_key( horeca_id ): UUID <<FK>>
}

table( restaurant_adress ){
    primary_key( id ): UUID
    column( adress ): TEXT
    foreign_key( restaurant_id ): UUID <<FK>>
}

table( horeca_basket ){
    primary_key( id ): UUID
    foreign_key( horeca_id ): UUID <<FK>>
    foreign_key( supplier_id ): UUID <<FK>> 
    foreign_key( good_ids ): ARRAY UUID <<FK>> /'массив заказанных товаров'/
    column( total_price ): NUMERIC
    column( is_active ): BOOL
    column( modified ): datetime
}

table( horeca_basket_goods ){
    primary_key( id ): UUID
    foreign_key( horeca_basket_id ): UUID <<FK>>
    foreign_key( good_id ): UUID <<FK>>
    column( quantity ): INTEGER
}

table( horeca_order ){
    primary_key( id ): UUID
    foreign_key( horeca_basket_id ): UUID <<FK>>
    column( restaurant_name ): TEXT
    column( delivery_adress ): TEXT
    column( comment ): TEXT
    column( phone_number ): TEXT
    column( second_phone_number ): TEXT
    column( delivery_day ): TEXT
    column( delivery_time ): TEXT 
    column( is_individual ) TEXT /'Признак "оплатить как физлицо"'/
    column( created ): datetime
}

suppliers ||--o{ supplier_cert

suppliers_city_tags }|--|| city_tags
suppliers_city_tags }|--|| suppliers

suppliers_region_tags }|--|| region_tags
suppliers_region_tags }|--|| suppliers

suppliers ||--o{ good

category_tag ||--o{ good_tag
category_tag ||--|{ good

horeca ||--|{ horeca_favourites
suppliers ||--|{ horeca_favourites

restaurant ||--|{ restaurant_adress
horeca ||--o{ restaurant

horeca ||--o{ horeca_basket
good }o--o{ horeca_basket

horeca_basket ||--|| horeca_order

horeca_basket }o--|| suppliers

horeca_basket_goods }|--|| horeca_basket

horeca_basket_goods }|--|| good

@enduml